--- a/src/server/styles/app.css
+++ b/src/server/styles/app.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: 'Sinkin Sans';
+  src: url('../fonts/SinkinSans-400Regular.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Sinkin Sans';
+  src: url('../fonts/SinkinSans-700Bold.otf') format('opentype');
+  font-weight: bold;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  text-size-adjust: 100%;
+}
